yamls/step17-base-authn.yaml
# service communication in base namespace must use mTLS

apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: base-strict
  namespace: base
spec:
  mtls:
    mode: STRICT
