yamls/step04-apps-order-v2.yaml
# order service version 2 app

apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-v2
  namespace: base
  labels:
    app: order
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
      version: v2
  template:
    metadata:
      labels:
        app: order
        version: v2
    spec:
      containers:
        - name: order
          image: ccr.ccs.tencentyun.com/tcmesh/order:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 7000
              protocol: TCP
