yamls/step03-frontend-vs.yaml
# frontend service routing settings

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vs
  namespace: base
spec:
  hosts:
    - '*'
  gateways:
    - base/frontend-gw
  http:
    - route:
        - destination:
            host: frontend.base.svc.cluster.local
